--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- <link rel="stylesheet" href="AOS/aos-234.css" /> -->
     <!-- VenoBox CSS -->
     <!-- <link rel="stylesheet" href="venobox/venobox.css" /> -->
-    <title>Personal Portfolio</title>
+    <title>Navigation Bar in Bootstrap 5</title>
   </head>
   <body>
     <!------------------------------------------ Navbar --------------------------------->
